--- a/css/styles.css
+++ b/css/styles.css
@@ -489,6 +489,7 @@ ul {
 .newsletter_form .input {
   width: 358px;
   height: 50px;
+  color: var(--third-brand-color);
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   padding: 15px 16px;
